# coxwave

./: .gitignore  README.md  api_test.ipynb  assistant.py  config.py  db.py  insert_datas.ipynb  main.py  prompt.py  pyproject.toml
datas/: final_result.json
modules/: assistant.py  db.py  prompt.py
preprocessing/: insert_datas.ipynb  open_pkl.py
tests/: api_test.ipynb  test_main.py
