[tool.poetry]
name = "coxwave"
version = "0.1.0"
description = ""
authors = ["Michael <xcellentbird@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
openai = "^1.78.0"
pymilvus = {extras = ["model"], version = "^2.5.8"}
streamlit = "^1.45.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
